src/assets/_city.scss
@import "./variables";

.city-list {
  display: flex;
  flex-direction: column;
  gap: 15px;
}
.city-list-item {
  list-style-type: none;
  background: #0000002a;
  border-radius: 15px;
  width: 100%;
  padding: 15px;
  position: relative;
}
//CURRENT WEATHER ///////////////////////////////////////////////////////////////
.current-weather {
  width: 100%;
  display: flex;
  justify-content: center;
  gap: 30px;
  text-align: center;
}
.city-info,
.temp-info {
  display: flex;
  flex-direction: column;
  align-items: center;
}
.city-name,
.temp-info-main {
  font-weight: $bold-weight;
  font-size: 25px;
}
.city-description,
.temp-info-feels {
  font-weight: $regular-weight;
  font-size: 12px;
}

//HOURLY WEATHER ///////////////////////////////////////////////////////////////

.hourly-weather {
  background: #0000007a;
  border-radius: 15px;
  padding: 15px;
  .wrapper {
    overflow: auto;
  }
}

.hourly-weather-title {
  color: white;
  width: max-content;
  margin: auto;

  font-weight: $bold-weight;
  font-size: 25px;
}

.hourly-weather-list {
  display: flex;
  padding: 15px;
  justify-content: center;
  gap: 15px;
}

.hourly-weather-item {
  display: flex;
  flex-direction: column;
  align-items: center;
  text-align: center;
  .time {
    color: white;
  }
  .weather-img {
    height: 100px;
    width: 100px;
  }

  .description {
    color: white;
    font-weight: $regular-weight;
    font-size: 12px;
  }
  .temp {
    color: white;
  }
}

.favorite-button {
  position: absolute;
  right: 0;
  top: 0;
  margin: 15px;
  cursor: pointer;
}
.active {
  path:nth-child(3) {
    fill: red;
    opacity: 1;
  }
}

